<resources>
    <string name="app_name">ToiletApp</string>
    <string name="open">Opened</string>
    <string name="closed">Closed</string>
    <string name="man">Man</string>
    <string name="vrouw">Vrouw</string>
    <string name="toegankelijk_voor_rolstoel">Toegankelijk voor rolstoel</string>

    <string name="button_register">Create Account</string>
    <string name="registration_firstName">First Name</string>
    <string name="registration_lastName">Last Name</string>
    <string name="registration_email">E-mail</string>
    <string name="registration_password">Enter Password</string>
    <string name="registration_c_password">Confirm Password</string>
    <string name="registration_screen">REGISTER NOW!</string>
    <string name="continue_without_login">CONTINUE WITHOUT LOGIN</string>
    <string name="add_toilet_string">ADD TOILET</string>

    <string name="toiletUUID">ToiletUUID</string>




  <string name="add_toilet_omschrijving">Omschrijving</string>
  <string name="add_toilet_straatnaam">Straatnaam</string>
  <string name="add_toilet_huisnummer">Huisnummer</string>
  <string name="add_toilet_district">District</string>
  <string name="add_toilet_postcode">Postcode</string>
  <string name="add_toilet_doelgroep">Doelgroep</string>
  <string name="add_toilet_openingsuren">Openingsuren</string>
  <string name="add_toilet_luiertafel">Luitertafel</string>


  <string name="logo">Logo</string>
    <string name="login_screen_string">LOGIN SCREEN</string>
    <string name="login_string">LOGIN</string>
    <string name="create_new_account">Create New Account</string>
    <string name="already_have_an_account">ALREADY HAVE AN ACCOUNT</string>
  <string name="add_toilet_integraal_toegankelijk">Integraal Toegankelijk</string>
  <string name="add_toilet_betalend">Betalend</string>
    <string name="add_toilet">Add Toilet</string>

</resources>
