<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/linearLayout"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/app_Background"
  tools:context=".Register">

  <TextView
    android:id="@+id/registration_screen_textview_registration"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="100dp"
    android:layout_marginEnd="100dp"
    android:gravity="center"
    android:paddingTop="30dp"
    android:text="@string/registration_screen"
    android:textColor="@color/app_TextColor"
    android:visibility="visible"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/textInput_firstName_registration"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="100dp"
    android:layout_marginTop="25dp"
    android:layout_marginEnd="100dp"
    android:paddingTop="25dp"
    android:textColorHint="@color/app_TextColor"
    app:helperTextEnabled="false"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/registration_screen_textview_registration">

    <EditText
      android:id="@+id/firstName_registration"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:drawableStart="@drawable/person_icon"
      android:drawablePadding="5dp"
      android:hint="@string/registration_firstName"
      android:importantForAutofill="no"
      android:inputType="textPersonName"
      android:textColor="@color/app_TextColor"
      android:textSize="14sp"
      tools:ignore="SpeakableTextPresentCheck" />

  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/textInput_name_registration"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="100dp"
    android:layout_marginEnd="100dp"
    android:textColorHint="@color/app_TextColor"
    app:helperTextEnabled="false"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textInput_firstName_registration">

    <EditText
      android:id="@+id/lastName_registration"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:drawableStart="@drawable/person_icon"
      android:drawablePadding="5dp"
      android:hint="@string/registration_lastName"
      android:importantForAutofill="no"
      android:inputType="textPersonName"
      android:textColor="@color/app_TextColor"
      android:textSize="14sp"
      tools:ignore="SpeakableTextPresentCheck" />

  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/textInput_email_registration"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="100dp"
    android:layout_marginEnd="100dp"
    android:textColorHint="@color/app_TextColor"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textInput_name_registration">

    <EditText
      android:id="@+id/email_register"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:drawableStart="@drawable/email_icon"
      android:drawablePadding="5dp"
      android:hint="@string/registration_email"
      android:importantForAutofill="no"
      android:inputType="textEmailAddress"
      android:textColor="@color/app_TextColor"
      android:textSize="14sp"
      tools:ignore="SpeakableTextPresentCheck" />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/textInput_password_registration"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="100dp"
    android:layout_marginEnd="100dp"
    android:textColorHint="@color/app_TextColor"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textInput_email_registration"
    app:passwordToggleEnabled="true">

    <EditText
      android:id="@+id/password_registration"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:drawableStart="@drawable/password_icon"
      android:drawablePadding="5dp"
      android:hint="@string/registration_password"
      android:importantForAutofill="no"
      android:inputType="textPassword"
      android:textColor="@color/app_TextColor"
      android:textSize="14sp"
      tools:ignore="SpeakableTextPresentCheck" />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/textInput_c_password_registration"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="100dp"
    android:layout_marginEnd="100dp"
    android:textColorHint="@color/app_TextColor"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textInput_password_registration"
    app:passwordToggleEnabled="true">

    <EditText
      android:id="@+id/confirm_password_registration"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:drawableStart="@drawable/password_icon"
      android:drawablePadding="5dp"
      android:hint="@string/registration_c_password"
      android:importantForAutofill="no"
      android:inputType="textPassword"
      android:textColor="@color/app_TextColor"
      android:textSize="14sp"
      tools:ignore="SpeakableTextPresentCheck" />
  </com.google.android.material.textfield.TextInputLayout>

  <Button
    android:id="@+id/register_button"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="100dp"
    android:layout_marginEnd="100dp"
    android:layout_marginBottom="150dp"
    android:background="@color/app_Orange"
    android:text="@string/button_register"
    android:textAlignment="center"
    android:textColor="@color/app_Background"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    tools:ignore="TextContrastCheck" />

  <Button
    android:id="@+id/already_have_account"
    style="?android:attr/borderlessButtonStyle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="100dp"
    android:layout_marginTop="15dp"
    android:layout_marginEnd="100dp"
    android:text="@string/already_have_an_account"
    android:textColor="@color/app_TextColor"
    android:textSize="12sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/register_button" />

</androidx.constraintlayout.widget.ConstraintLayout>
